# beagleboard-enocean

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-and-push.yml  build-rust-and-push.yml
app/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app-rs/: .dockerignore  Cargo.toml  Dockerfile
app-rs/src/: lib.rs  main.rs
app-rs/src/eep/: catalog.rs  decoder.rs  mod.rs
app-rs/src/eep/builtins/: a5_02_05.rs  a5_04_01.rs  a5_07_01.rs  a5_09_04.rs  d5_00_01.rs  f6_02_01.rs  mod.rs
app-rs/src/esp3/: common_command.rs  crc8.rs  events.rs  framing.rs  mod.rs  packets.rs  radio.rs  response.rs
app-rs/src/transport/: controller.rs  fake.rs  link.rs  mod.rs  serial_link.rs
app-rs/src/web/: app.rs  mod.rs  state.rs  templates.rs
app-rs/src/web/routes/: pages.rs
app-rs/src/web/static/: app.css  app.js  device.js  leds.js  pair.js
app-rs/src/web/templates/: base.html  device_detail.html  devices.html  index.html  pair.html  telegrams.html
app-rs/src/web/templates/fragments/: device_row.html
app-rs/src/web/ws/: live.rs
app-rs/tests/: test_common_command.rs  test_crc8.rs  test_eep.rs  test_framing.rs  test_radio.rs  test_transport.rs
app-rs/tests/common/: mod.rs
app/docs/: BBB-pinmux.md  REGISTRY.md
app/scripts/: install-on-bbb.sh  leds-identify.sh
app/scripts/systemd/: uart4-pinmux.service  vdsensor-update.service  vdsensor-update.timer  vdsensor.service
app/src/vdsensor/: cli.py  clock.py  config.py  main.py
app/src/vdsensor/eep/: __init__.py  catalog.py  decoder.py
app/src/vdsensor/eep/builtins/: __init__.py  a5_02_05.py  a5_04_01.py  a5_07_01.py  a5_09_04.py  d5_00_01.py  f6_02_01.py
app/src/vdsensor/esp3/: __init__.py  common_command.py  crc8.py  events.py  framing.py  packets.py  radio.py  response.py
app/src/vdsensor/hardware/: __init__.py  leds.py
app/src/vdsensor/mqtt/: __init__.py  bridge.py  ha_discovery.py  topics.py
app/src/vdsensor/registry/: __init__.py  db.py  devices.py  models.py  pairing.py  persistence.py  telegrams.py
app/src/vdsensor/transport/: __init__.py  controller.py  fake.py  link.py  serial_link.py
app/src/vdsensor/web/: app.py  deps.py
app/src/vdsensor/web/routes/: devices.py  pages.py  pairing.py
app/src/vdsensor/web/static/: app.css  app.js  device.js  leds.js  pair.js
app/src/vdsensor/web/templates/: base.html  device_detail.html  devices.html  index.html  pair.html  telegrams.html
app/src/vdsensor/web/templates/fragments/: device_row.html
app/src/vdsensor/web/ws/: live.py  pair.py
app/tests/: test_clock.py  test_common_command.py  test_config.py  test_crc8.py  test_eep.py  test_framing.py  test_leds.py  test_mqtt.py  test_radio.py  test_registry.py
