[package]
name = "vdsensor"
version = "0.1.0"
edition = "2021"
description = "EnOcean ESP3 router with web UI and Home Assistant MQTT discovery"
license = "MIT"

[[bin]]
name = "vdsensor"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync", "signal"] }

# serial port (R2 — not yet referenced)
tokio-serial = "5.4"

# http + ws + templates (R3)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
minijinja = { version = "2", features = ["loader"] }

# storage (R4) — `bundled` on libsqlite3-sys avoids a system libsqlite3 dep
# in the FROM-scratch container.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# mqtt (R6)
rumqttc = "0.24"

# config (R8)
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
url = "2"

[dev-dependencies]
rstest = "0.23"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
