[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdsensor"
version = "0.1.0dev"
description = "EnOcean ESP3 router with web UI and Home Assistant MQTT discovery"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyserial-asyncio>=0.6",
    "aiomqtt>=2.3",
    # [asyncio] pulls greenlet, which SQLAlchemy declares as conditional and
    # whose marker excludes armv7l — without this extra, the cross-built
    # ARMv7 image starts up and crashes at the first DB connect with
    # "the greenlet library is required to use this function".
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
vdsensor = "vdsensor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vdsensor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]
